<resources>

    <string name="app_name">pulmonaryDisease</string>
    <string name="appointments">Appointments</string>
    <string name="doctors">Doctors</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="sign_out">Sign Out</string>
    <string name="title">Pulmonary Diseases</string>
    <string name="clickPatientSignUp">SIGN UP AS PATIENT</string>
    <string name="clickDoctorSignUp">SIGN UP AS DOCTOR</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In!</string>
    <string name="bgimage">bgImage</string>
    <string name="bgImage">bgImage</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="cnic">cnic</string>
    <string name="CNIC">CNIC</string>
    <string name="choose_your_speciality">Choose Your Speciality</string>
    <string name="info">Info</string>
    <string name="questionnaire">QUESTIONNAIRE</string>
    <string name="submit">SUBMIT</string>
    <string name="select_Disease_Questionaire">1.  Select Disease if you are suffering from any?</string>
    <string name="covid_questionniare">10. Have you ever been COVID Positive?</string>
    <string name="sleeping_hours_questionniare">9. What are your average Sleeping Hours?</string>
    <string name="industrial_area_questionniare">8. Do you Live near Industrial Area?</string>
    <string name="smoke_questionniare">7. Do you Smoke?</string>
    <string name="genetic_disease_questionniare">6. Did your family have any Genetic Disease?</string>
    <string name="any_allergies_questionniare">5. List down if you have any allergies?</string>
    <string name="any_surgery_questionniare">4. Have you went through any surgery?</string>
    <string name="physical_activities_questionniare">3. Your Physical Activities?</string>
    <string name="weight_questionniare">2. What is your weight?</string>
    <string name="title_activity_login_doctor">LoginDoctorActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="doctor_download">
        1. Download and install the cough diagnostic app on your device.
    </string>

    <string name="doctor_create">
        2. Create an account with your email address and password.
    </string>

    <string name="doctor_details">
        3. Enter your doctor’s information such as name,contact details.
    </string>
    <string name="doctor_qualification">
        4. Choose a Qualification from the list of options.
    </string>
    <string name="doctor_answer">
        5. Answer a series of questions about the patient’s symptoms to help the app determine the cause of the cough.
    </string>
    <string name="doctor_track">
        6. Use the app to track the patient’s progress over time and to compare their symptoms with those of other patients with similar conditions.
    </string>
    <string name="doctor_alert">
        7. Receive alerts when the patient’s condition worsens or improves.
    </string>
    <string name="doctor_professionals">
        8. Use the app to share patient information with other medical professionals.
    </string>
    <string name="doctor_treatment">
        9. Monitor patient health and make adjustments in their treatment plan as needed.
    </string>
    <string name="doctor_info">
        10. Keep your patient informed of their progress and provide them with resources for additional information.
    </string>
    <string name="pulmonary_disease">Pulmonary Disease</string>
    <string name="patient_dashboard">Patient Dashboard</string>
    <string name="add_symptoms">ADD Symptoms</string>
    <string name="press_and_hold_to_analyze_cough">Press and Hold to Analyze Cough</string>


    <string-array name="disease">
        <item>Select A Disease</item>
        <item>Asthma</item>
        <item>Flu</item>
        <item>COPD</item>
        <item>Lung Cancer</item>
        <item>Covid</item>
    </string-array>

    <string-array name="smoke">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="industrial">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="covid">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="doctorsQualification">
        <item>Select</item>
        <item>Allergists/Immunologists</item>
        <item>Pulmonologists</item>
        <item>Preventive Medicine Specialists</item>
        <item>Dentist</item>

    </string-array>


</resources>