<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorInfoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="640dp"
        android:rotation="180"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/senbold"
        android:text="INFO"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.316" />

<!--    this is the gudie for doctor. How to use the application-->


    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/senbold"
        android:text="HOW TO USE APPLICATION"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
            android:layout_marginVertical="20dp"
            android:textSize="20sp"
            android:fontFamily="@font/senregular"
            android:textColor="#525DAA"
            android:text="@string/doctor_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginVertical="20dp"

                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginVertical="20dp"

                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginVertical="20dp"

                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_qualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView

                android:layout_marginVertical="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginVertical="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginVertical="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginVertical="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_professionals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginVertical="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_treatment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginVertical="20dp"
                android:textSize="20sp"
                android:fontFamily="@font/senregular"
                android:textColor="#525DAA"
                android:text="@string/doctor_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/btnContactAdmin"
        android:textColor="@color/white"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/white_border_button"
        android:text="Contact Admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />



</androidx.constraintlayout.widget.ConstraintLayout>